--- a/RoomGame/RoomGame.csproj
+++ b/RoomGame/RoomGame.csproj
@@ -42,13 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputHandler.cs" />
     <Compile Include="Interactable.cs" />
     <Compile Include="Journey.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="PlayerData.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
-    <Compile Include="RoomExit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
